# portfolio-mgmt

./: .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
examples/: portfolio.txt
examples/data/: countries.csv  etfs.csv  weekly-prices.csv
src/portfolio_mgmt/cli/: main.py  nodes.py  portfolio.py  transactions.py  utils.py
src/portfolio_mgmt/core/: constants.py  csv_data.py  data.py  environment.py  etf.py  nodes.py  optimization.py  portfolio.py  risk_reward.py  transaction.py
tests/: conftest.py
tests/unit/: stub_data.py  test_etf.py  test_nodes.py  test_portfolio.py
